# neighbour-squasher

./: .travis.yml  CHANGELOG.md  LICENSE  README.md  default.nix  neighbour-squasher  neighbour-squasher.cabal  release.nix  stack.yaml
.github/workflows/: release.yml
app/: Main.hs
src/: NeighbourSquasher.hs
src/NeighbourSquasher/: Cli.hs  Core.hs
test/: Spec.hs
test/HedgeHog/: Spec.hs
test/Oracle/: Spec.hs
