cabal-version:       2.0
name:                neighbour-squasher
version:             0.0.0
synopsis:            Squash consecutive same characters into one
description:         Squash consecutive same characters into one
homepage:            https://github.com/bangn/neighbour-squasher
bug-reports:         https://github.com/bangn/neighbour-squasher/issues
license:             MIT
license-file:        LICENSE
author:              bangn
maintainer:          thebangnguyen@gmail.com
copyright:           2019 bangn
category:            Utility
build-type:          Simple
extra-doc-files:     README.md
                   , CHANGELOG.md
tested-with:         GHC == 8.6.4

source-repository head
  type:                git
  location:            https://github.com/bangn/neighbour-squasher.git

library
  hs-source-dirs:      src
  exposed-modules:     NeighbourSquasher
                         NeighbourSquasher.Core
                         NeighbourSquasher.Cli

  autogen-modules:     Paths_neighbour_squasher
  other-modules:       Paths_neighbour_squasher

  build-depends:       base ^>= 4.12.0.0
                     , optparse-applicative ^>= 0.14

  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010
  default-extensions:  ConstraintKinds
                       DeriveGeneric
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       KindSignatures
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TupleSections
                       TypeApplications
                       ViewPatterns

executable neighbour-squasher
  hs-source-dirs:      app
  main-is:             Main.hs

  build-depends:       base ^>= 4.12.0.0
                     , neighbour-squasher


  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010
  default-extensions:  ConstraintKinds
                       DeriveGeneric
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       KindSignatures
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TupleSections
                       TypeApplications
                       ViewPatterns

test-suite neighbour-squasher-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Oracle.Spec
                       HedgeHog.Spec

  build-depends:       base ^>= 4.12.0.0
                     , extra ^>= 1.6.15
                     , hspec ^>= 2.7.1
                     , neighbour-squasher
                     , hedgehog >= 1.0

  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010
  default-extensions:  ConstraintKinds
                       DeriveGeneric
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       KindSignatures
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TupleSections
                       TypeApplications
                       ViewPatterns
